spark.yaml
# spark.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master-svc  
spec:
  type: NodePort
  ports:
    - port: 8080
      name: webui
      nodePort: 30008
    - port: 7077
      name: master
      nodePort: 30009
  selector:
    app: spark-master
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-master
  template:
    metadata:
      labels:
        app: spark-master
    spec:
      containers:
        - name: spark-master
          image: warvba22/spark:1.0.1  
          command: ["/opt/spark/bin/spark-class", "org.apache.spark.deploy.master.Master"]
          ports:
            - containerPort: 7077
            - containerPort: 8080
          volumeMounts:
            - name: spark-apps
              mountPath: /opt/spark-apps
      volumes:
        - name: spark-apps
          hostPath:
            path: /data/spark-apps
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spark-worker
  template:
    metadata:
      labels:
        app: spark-worker
    spec:
      containers:
        - name: spark-worker
          image: warvba22/spark:1.0.1 
          command: ["/opt/spark/bin/spark-class", "org.apache.spark.deploy.worker.Worker", "spark://spark-master-svc:7077"]
          volumeMounts:
            - name: spark-apps
              mountPath: /opt/spark-apps
      volumes:
        - name: spark-apps
          hostPath:
            path: /data/spark-apps
