ingress_airflow.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: airflow.localhost  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-svc  \
                port:
                  number: 8081
