ingress_spark.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-master-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: spark.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-master-svc
                port:
                  number: 8080
